--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,87 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+/* parent
+/* Parent */
+.user-form {
+  background-color: #FFFBDA;
+  margin: 2em auto;
+  padding: 2em;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+   /* Centers the content horizontally */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Title */
+.title {
+  text-align: center;
+  font-size: 3em;
+  margin-bottom: 1em; /* Adds space below the title */
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+/* Login and Sign Up Buttons */
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  margin-top: 2em;
+  text-align: center;
+}
+
+.login-signup{
+  background: #fff;
+  border-radius: 5px;
+  padding: 0.75em;
+  margin-top: 1em;
+  transition: background-color 0.3s;
+}
+
+ .navbar input:focus {
+  background-color: #FFF8E8;
+  outline: none;
+}
+
+
+ .navbar  {
+  background-color: #FFBB70;
+  border: none;
+  border-radius: 5px;
+  padding: 0.75em;
+  margin-top: 1.5em;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  transition: background-color 0.3s, transform 0.1s;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+.user-form .submitbtnL[type="submit"]:hover {
+  background-color: #ED9455;
+  transform: scale(1.05);
 }
+
+/* Sign in/Login */
+.login {
+  align-content: center;
+}
+.signupbtn {
+  margin-top: 1em;
+ 
+}
+
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  margin-top: 2em; 
+}
+
+
+.navbar a:hover,
+.navbar button:hover {
+  color: #0056b3;
+}
+
+.navbar a.active {
+  color: #0056b3;
+} 
