--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,162 +1,17 @@
 
 /* Sign in/Login */
-/* .signup-container, .login-container {
-  background: url('/src/components/UserPanel/images/construction-picture.JPG') no-repeat center center;
-  background-size: cover;
-  min-height: 100vh; 
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-} */
-/* Parent */
-/* User form styling */
-/* .user-form {
-  background-color: #E3E1D9;
-  margin: 2em auto;
-  padding: 2em;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  display: flex;
-  flex-direction: column;
-} */
 
-/* Input fields styling */
-/* .signup-input, .login-input {
-  display: block;
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 16px; 
-  border: 1px solid #ddd; 
-  border-radius: 10px; 
-  font-size: 16px;
-  color: #333; 
-  box-sizing: border-box; 
-  transition: border-color 0.3s ease; 
-} */
-
-/* .signup-input:focus, .login-input:focus {
-  border-color: #ED9455; 
-  outline: none; 
-} */
-
-
-/* login title name */
-/* .login {
-  align-content: center;
-
-} */
-
-
-/* Login submit button */
-/* .submitbtnL {
-  background-color:#FFBB70;
-  padding: 15px;
-  border-radius: 10px;
-
-} */
-
-/* .submitbtnL:hover {
-  background-color: #ED9455;
-  transform: scale(1.05);
-} */
-
-/* sign up submit button */
-/* .signbtn {
-  background-color:#FFBB70;
-  padding: 15px;
-  border-radius: 10px;
-} */
-
-/* .signbtn:hover {
-  background-color: #ED9455;
-  transform: scale(1.05);
-} */
-
-/* toggle button between login and sign up */
-/* .signupbtn {
-  margin-top: 1em;
-  color:#FFBB70;
-  border: none;
-  padding: 10px 20px; 
-  border-radius: 5px; 
-  font-size: 16px; 
-  cursor: pointer;
-  transition: background-color 0.3s ease; 
-  margin-top: 10px; 
- 
-} */
-/* .signupbtn:hover{
-  background-color:#ED9455;
-} */
-
-/* .signupbtn:focus {
-  outline: none; 
-} */
-
-
-
-
-/* Title */
-/* .title {
-  text-align: center;
-  font-size: 3em;
-  margin-bottom: 1em; 
-} */
-
-/* Login and Sign Up Buttons */
-/* .flex-row {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: center;
-  margin-top: 2em;
-  text-align: center;
-} */
-
- /* navbar */
- /* .navbar input:focus {
-  background-color: #FFF8E8;
-  outline: none;
-} */
-
-
- /* .navbar  {
-  background-color: #FFBB70;
-  border: none;
-  border-radius: 5px;
-  padding: 0.75em;
-  margin-top: 1.5em;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.1s;
-} */
-
-/* .flex-row {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: center;
-  margin-top: 2em; 
-} */
-/* Sign in/Login */
-.signup-container, .login-container {
-  background: url('/src/components/UserPanel/images/construction-picture.JPG') no-repeat center center;
-  background-size: cover;
-  min-height: 100vh; 
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
 
 /* User form styling */
 .user-form {
+  display: flex;
   background-color: #E3E1D9;
   margin: 2em auto;
   padding: 2em;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 400px;
-  display: flex;
+  text-align: center;
   flex-direction: column;
 }
 
@@ -172,6 +27,7 @@
   color: #333; 
   box-sizing: border-box; 
   transition: border-color 0.3s ease; 
+  
 }
 
 .signup-input:focus, .login-input:focus {
@@ -222,10 +78,16 @@
 }
 
 /* Title */
+.parent-container {
+  justify-content: center;
+  justify-items: center;
+}
+
 .title {
   text-align: center;
-  font-size: 3em;
+  font-size: 2em;
   margin-bottom: 1em; 
+  
 }
 
 /* Login and Sign Up Buttons */
@@ -242,6 +104,7 @@
 .navbar input:focus {
   background-color: #FFF8E8;
   outline: none;
+ 
 }
 
 .navbar {
@@ -251,6 +114,7 @@
   padding: 0.75em;
   margin-top: 1.5em;
   cursor: pointer;
+  
   transition: background-color 0.3s, transform 0.1s;
 }
 
@@ -296,7 +160,7 @@
   }
 
   .title {
-    font-size: 2.5em;
+    font-size: 2em;
   }
 }
 
@@ -304,7 +168,7 @@
 @media (min-width: 1200px) and (max-width: 1600px) {
   .user-form {
     padding: 2em;
-    max-width: 70%;
+    max-width: 50%;
   }
 
   .signup-input, .login-input {
@@ -318,7 +182,7 @@
   }
 
   .title {
-    font-size: 3em;
+    font-size: 2em;
   }
 }
 
@@ -340,7 +204,7 @@
   }
 
   .title {
-    font-size: 3.5em;
+    font-size: 2em;
   }
 }
 
@@ -362,7 +226,7 @@
   }
 
   .title {
-    font-size: 4em;
+    font-size: 3em;
   }
 }
 
